jar moves on touch

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
 
 
     <ImageView
+        android:id="@+id/jar"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/jar"
